# vision_opencv1

./: .gitignore  README.md  package.xml  setup.cfg  setup.py  test_serial.py
.devcontainer/: Dockerfile  build.sh  devcontainer.json  ros.dockerfile
.devcontainer/cpu/: Dockerfile  build.bash
.devcontainer/gpu/: Dockerfile  build.bash  build.sh  docker-compose.yml
.devcontainer/ros/: Dockerfile  build.bash  docker-compose.yml
.github/workflows/: docker_auto_build_push.yml
ArUco/: Aruco.py  DetectNumber_image.py  test.py
CameraCalibration/: README.md
DepthCamera/: PlaneDepToSpace.py  README.md  SpaceToPlaneDep.py  color_camera_info.yaml  depth_camera_info.yaml  depth_to_color_info.yaml
PoseSolver/: Aruco.py  DetectNumber_image.py  DetectNumber_video.py  PoseSolver.py  kfs_mapper.py  test.py
Solver/: kfs_mapper.py
YOLOv11/: README.md  yolo_export.py  yolo_lib.py
YOLOv11_seg/: Coco2Yolo.py
YOLOv11官方介绍文档中文版/: YOLOv11-Predict使用文档中文译本.md  YOLOv11-Train使用文档中文译本.md
cv_lib/: README.md  __init__.py  aruco_demo.py  aruco_detector_node.py  aruco_image.py  aruco_kfs_handler.py  aruco_lib.py  auto_play_aruco.py  cv_bridge.py  cv_cornerdetection.py  cv_mask.py  generate_aruco.py  ros2_websock_bridge.py  ros_bridge.py  sub_test.py  usb_bind.sh  usb_camera_reconnect.py  usb_unbind.sh  yolo_lib.py  zmq_bridge.py
cv_mask/: cv_mask.py
cv_node/: aruco_detect.py  basket_detect.py
launch/: aruco_kfs.launch.py  qr_kfs.launch.py
yolo/: README.md
yolo11n-seg_int8_openvino_model/: metadata.yaml
yolo11n-seg_openvino_model/: metadata.yaml  yolo11n-seg.xml
(+33 files in other folders)
