<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_opencv</name>
  <version>0.0.0</version>
  <description>Aruco detection and KFS mapping package</description>
  <maintainer email="2596208480@qq.com">qing</maintainer>
  <license>Apache-2.0</license>

  <depend>usb_cam</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  
  <depend>aruco_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

